feat: post /reflect
